objects/Budget__c/fields/Vendor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Phone__c</fullName>
    <label>Vendor Phone</label>
    <type>Phone</type>
</CustomField>