objects/Budget__c/fields/What_capability_will_solution_provide__c.field-meta.xml
<CustomField>
    <fullName>What_capability_will_solution_provide__c</fullName>
    <inlineHelpText>Include specific use cases</inlineHelpText>
    <label>What capability will solution provide</label>
    <type>TextArea</type>
</CustomField>