objects/Budget__c/fields/Whats_the_worst_that_could_happen__c.field-meta.xml
<CustomField>
    <fullName>Whats_the_worst_that_could_happen__c</fullName>
    <label>What&apos;s the worst that could happen</label>
    <type>TextArea</type>
</CustomField>