objects/Budget__c/fields/Which_TAM_Week__c.field-meta.xml
<CustomField>
    <fullName>Which_TAM_Week__c</fullName>
    <inlineHelpText>TAM Week #</inlineHelpText>
    <label>Which TAM Week?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>