objects/Budget__c/recordTypes/Private_Record.recordType-meta.xml
<RecordType>
    <fullName>Private_Record</fullName>
    <active>true</active>
    <label>Private Record</label>
</RecordType>