objects/Budget__c/recordTypes/Procurement.recordType-meta.xml
<RecordType>
    <fullName>Procurement</fullName>
    <active>true</active>
    <label>Procurement</label>
</RecordType>