objects/Budget__c/recordTypes/Procurement_Security.recordType-meta.xml
<RecordType>
    <fullName>Procurement_Security</fullName>
    <active>true</active>
    <label>Procurement IT/Security</label>
</RecordType>