objects/Budget__c/validationRules/Invalid_Department_or_Region.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Department_or_Region</fullName>
    <active>true</active>
    <errorConditionFormula>Budget_Owner__c = NULL &amp;&amp;
 Finance_Approver__c = NULL &amp;&amp;
 Procurement_E_Staff_Approver__c = NULL &amp;&amp;
 RecordType.Name = &quot;Procurement&quot;</errorConditionFormula>
    <errorMessage>You have selected an invalid Department and/or Region. Please view the Approval Matrix &amp; select a valid combination</errorMessage>
</ValidationRule>