objects/Budget__c/validationRules/Sum_of_Line_Items_Greater_than_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Sum_of_Line_Items_Greater_than_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Line_Item_Amount__c &gt;  Budget_Amount__c</errorConditionFormula>
    <errorMessage>The Sum of Line Items exceed the Purchase Amount</errorMessage>
</ValidationRule>