objects/Budget__c/validationRules/TAM_Week_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>TAM_Week_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Is_This_For_TAM_Week__c = TRUE &amp;&amp;
 Which_TAM_Week__c = NULL &amp;&amp;
 RecordType.Name = &quot;Procurement&quot;</errorConditionFormula>
    <errorDisplayField>Which_TAM_Week__c</errorDisplayField>
    <errorMessage>Please Specify Which Tam Week this request is for</errorMessage>
</ValidationRule>