objects/Budget__c/validationRules/Technical_Training_Group_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Technical_Training_Group_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Technical_Training_Group__c, &quot;Customer&quot;) &amp;&amp;
 Customer__c = NULL</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>Customer is required when Technical Training Group is marked &quot;Customer&quot;</errorMessage>
</ValidationRule>