objects/Budget__c/validationRules/Technical_Training_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Technical_Training_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Is_this_related_to_Technical_Training__c = TRUE &amp;&amp;
ISPICKVAL(Technical_Training_Group__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Technical_Training_Group__c</errorDisplayField>
    <errorMessage>Technical Training Group is required when Is this related to Technical Training? is marked</errorMessage>
</ValidationRule>