objects/Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program_Type__c</columns>
    <columns>Program_Name__c</columns>
    <columns>Program_Description__c</columns>
    <columns>Program_Location__c</columns>
    <columns>Vendor__c</columns>
    <columns>Status__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Budget_Level_4__c</columns>
    <columns>Budget_Owner__c</columns>
    <columns>Estimated_No_of_Accounts_Engaged__c</columns>
    <columns>Program_Start_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requestor__c</field>
        <operation>equals</operation>
        <value>Stefanie Coburn</value>
    </filters>
    <label>All</label>
</ListView>