objects/Budget__c/listViews/Approved_Procurement_Requests.listView-meta.xml
<ListView>
    <fullName>Approved_Procurement_Requests</fullName>
    <columns>NAME</columns>
    <columns>Program_Name__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Budget_Owner__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Budget__c.Procurement</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Procurement Requests</label>
</ListView>