objects/Budget__c/listViews/Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>Awaiting_Approval</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Program_Name__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Budget_Owner__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Awaiting Approval</label>
</ListView>