objects/Budget__c/listViews/FY19_POD_Week_budget_requests.listView-meta.xml
<ListView>
    <fullName>FY19_POD_Week_budget_requests</fullName>
    <columns>NAME</columns>
    <columns>Program_Type__c</columns>
    <columns>Program_Name__c</columns>
    <columns>Program_Description__c</columns>
    <columns>Program_Location__c</columns>
    <columns>Vendor__c</columns>
    <columns>Status__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Budget_Level_4__c</columns>
    <columns>Budget_Owner__c</columns>
    <columns>Estimated_No_of_Accounts_Engaged__c</columns>
    <columns>Program_Start_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Name__c</field>
        <operation>contains</operation>
        <value>POD Week</value>
    </filters>
    <filters>
        <field>Program_Name__c</field>
        <operation>contains</operation>
        <value>FY19</value>
    </filters>
    <label>FY19 POD Week budget requests</label>
</ListView>