objects/Budget__c/listViews/Procurement_Queue_Budget.listView-meta.xml
<ListView>
    <fullName>Procurement_Queue_Budget</fullName>
    <filterScope>Queue</filterScope>
    <label>Procurement Queue</label>
    <queue>Procurement_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>